<resources>
    <string name="app_name">alarmAmir</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">نام کاربری</string>
    <string name="prompt_password">رمز عبور</string>
    <string name="prompt_year">سال مالی</string>
    <string name="prompt_daftar">دفتر</string>
    <string name="prompt_company">شرکت</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">خوش امدید</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_your_number">تایید شماره شما</string>
    <string name="number_mobile_your">ورود</string>
    <string name="remember_me">مرا به یاد داشته باش </string>
    <string name="kalas">محصولات</string>
    <string name="add">افزودن</string>
    <string name="persons">اشخاص</string>
    <string name="groups">groups</string>
    <string name="group_description">group1</string>
    <string name="prompt_Markaz">مرکز</string>
    <string name="year">سال مالی</string>
    <string name="anbar">انبار</string>
    <string name="moshtari">مشتری</string>
    <string name="submit">ثبت سفارش</string>
    <string name="logout">خروج از سال مالی</string>
</resources>