<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="40sp"
    android:layout_height="match_parent">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/black"
    android:layout_gravity="center"
    android:textSize="24sp"
    android:text="@string/moshtari"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moshtari"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:hint="@string/moshtari">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:background="@android:color/transparent"
            />

    </com.google.android.material.textfield.TextInputLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/black"
    android:layout_gravity="center"
    android:textSize="24sp"
    android:text="@string/anbar"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/anbar"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/anbar">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:background="@android:color/transparent"
            />
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="28sp"
        android:padding="12sp"
        style="@style/Widget.MaterialComponents.Button"
        android:text="@string/submit"/>
</LinearLayout>