<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/btnFac"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/prod"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/kalas"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/box" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/prod"
            android:text="@string/kalas"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_marginStart="10dp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/add"
            app:srcCompat="@drawable/ic_baseline_add_24"
            android:layout_alignParentEnd="true"
            app:tint="@color/gray" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <RelativeLayout
        android:id="@+id/btnPro"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        >
        <ImageView
            android:id="@+id/person"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_centerVertical="true"
            android:contentDescription="@string/persons"
            app:srcCompat="@drawable/persons" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_toEndOf="@id/person"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:text="@string/persons"
            android:textColor="@color/black"
            android:textSize="32sp" />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/add"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:tint="@color/gray" />
    </RelativeLayout>
</LinearLayout>